# pico-new

./: .gitmodules  CMakeLists.txt  Makefile  README.md  TODO.md  compile.sh  flash.sh  init.sh
main_project/: CMakeLists.txt  main.c
oscilloscope/: CMakeLists.txt  command.h  led.c  led.h  led_pattern.c  led_pattern.h  led_program.c  led_program.h  main.c  pwm_driver.c  pwm_driver.h
project_a/: CMakeLists.txt
pwm_example/: CMakeLists.txt  main.c
serial_example/: CMakeLists.txt
src/: command.c  serial.c  serial.h
template/: CMakeLists.txt
test_project/: CMakeLists.txt
